--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,8 +54,13 @@ button {
   color: aquamarine;
 }
 
+* {
+  user-select: none;
+}
+
 button {
   background-color: aquamarine;
+  border: 1px solid aquamarine;
   color: rgb(0, 0, 0);
   padding: 4px;
   height: 100%;
